--- a/algorithm/LeetCode/[Hard] 3320. Count The Number of Winning Sequences.md
+++ b/algorithm/LeetCode/[Hard] 3320. Count The Number of Winning Sequences.md
@@ -51,7 +51,7 @@ Bob can beat Alice by making one of the following sequences of moves: "FWFWF", "
 
 # Submissions
 ---
-**Solution 1: (DP Top-Down)**
+**Solution 1: (DP Top-Down, 3D)**
 ```
 Runtime: 1346 ms
 Memory: 35.04 MB
@@ -70,8 +70,8 @@ class Solution {
             return dp[prev][curr][bob + 1000];
 
         long long f = 0, w = 0, e = 0;
-        if (s[curr] == 'F') {
-            if (prev != 0) 
+        if (s[curr] == 'F') {  // alice
+            if (prev != 0)  // bob
                 f = solveMem(s, 0, curr + 1, bob) % MOD % MOD;
             if (prev != 1) 
                 w = solveMem(s, 1, curr + 1, bob + 1) % MOD;
